# google-drive-recursive-ownership

./: README.md  pyproject.toml  requirements.txt  transfer.py
