[tool.poetry]
name = "google-drive-recursive-ownership"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
google-api-python-client = "^2.112.0"
oauth2client = "^4.1.3"
six = "^1.16.0"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
